# wasmtime-poc

./: .gitignore  Cargo.toml  bench-config.toml  build.rs
crates/wasmtime-poc-bin/: Cargo.toml  build.rs
crates/wasmtime-poc-bin/src/: main.rs
crates/wasmtime-poc-core/: Cargo.toml
crates/wasmtime-poc-core/benches/: bench.rs
crates/wasmtime-poc-core/src/: api.rs  lib.rs  runtime.rs
crates/wasmtime-poc-core/src/api/: debug_async_api.rs  env_async_api.rs  fio_async_api.rs  mqtt_async_api.rs  spawn_async_api.rs  unix_stream_socket_async_api.rs  util_async_api.rs
crates/wasmtime-poc-core/src/api/mqtt_async_api/: instanced.rs  lock_shared.rs  message_bus_shared.rs
crates/wasmtime-poc-core/src/runtime/: app_async.rs  app_common.rs  modules.rs
crates/wasmtime-poc-core/src/runtime/app_async/: async_module_runtime.rs  mqtt_runtime.rs
crates/wasmtime-poc-core/src/runtime/app_async/mqtt_runtime/: instanced_runtime.rs  shared_lock_runtime.rs  shared_message_bus_runtime.rs
modules/hash-worker/: Cargo.toml
modules/hash-worker/src/: lib.rs
modules/hash-worker/wit/: apis.wit
modules/ir-detector/: Cargo.toml
modules/ir-detector/src/: lib.rs
modules/ir-detector/wit/: apis.wit
modules/mqtt-module/: Cargo.toml
modules/mqtt-module/src/: lib.rs
src/: api.rs  app.rs  debug_api.rs  fio_api.rs  main.rs  module.rs  mqtt_api.rs  runtime.rs
src/api/: debug_api.rs  debug_async_api.rs  env_api.rs  env_async_api.rs  fio_api.rs  fio_async_api.rs  mqtt_api.rs  mqtt_async_api.rs  util_async_api.rs
src/runtime/: app.rs  app_async.rs  app_common.rs  modules.rs
wit-bindgen/: apis.wit  channels.wit  debug.wit  env.wit  fio.wit  mqtt.wit
