[package]
name = "wasmtime-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.39.1"
rumqttc = "0.14.0"
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.144"
anyhow = "1.0.62"
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "a4a138be44c8c959470b1e458bd7b5731813cbd2" }
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
