[package]
name = "wasmtime-poc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", features = ["async", "component-model"], rev = "7d790fc" }
rumqttc = "0.14.0"
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.144"
anyhow = "1.0.62"
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.25"
log = "0.4"
chrono = "0.4.23"
rand = "0.8.5"
async-trait = "0.1.61"
enum_dispatch = "0.3.11"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.21.0", features = ["full"] }

[[bench]]
name = "bench"
harness = false
